# jax-tunix-grokking

./: .gitignore  CHANGELOG.md  DISTILLEDGROKKING.md  FUTUREWORK.md  PAPER.md  PAPER_README.md  README.md  create_placeholder_figure.py  data.py  mechanistic_analysis.py  monitor_all_strategies.sh  monitor_distillation.sh  monitor_recursive.sh  paper_distilled_grokking.md  plot_all_strategies.py  plot_distillation_comparison.py  pyproject.toml  test_attention_distillation.py  test_distillation.py  test_feature_distillation.py  test_recursive_attention.py  test_recursive_feature.py  test_recursive_logit.py
configs/: default.yaml  quick_test.yaml  tpu.yaml
docs/: prd_grokking_distillation.md
paper/: README.md  paper.md  result_review.md
paper/blog/: distilled_grokking_breakthrough.astro  distilled_grokking_launchpad.astro  distilled_grokking_researcher.astro
paper/data/: mechanistic_analysis_results.json
paper/figures/: paper_results_table.tex
paper/scripts/: generate_paper_plots.py  plot_mechanistic_analysis.py
runs/example/: training_history.json
src/: checkpointing.py  distillation.py  models.py  optimizers.py  plot_results.py  run_experiments.py  train_nnx.py
src/experiments/: checkpointing.py  grokking_detector.py  model_scaling.py  wandb_logger.py
tests/: test_checkpointing.py  test_models.py
